// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Switch Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"one\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-purple\\"
      checked=\\"\\"
    /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Option 1</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"two\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-purple\\"
    /><label for=\\"two\\" class=\\"drac-text drac-text-white\\">Option 2</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"three\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-purple\\"
    /><label for=\\"three\\" class=\\"drac-text drac-text-white\\">Option 3</label>
  </div>
</div>
",
  "react": "<div style={{...}}>
  <div style={{...}}>
    <Switch id=\\"one\\" defaultChecked={true} color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
      Option 1
    </label>
  </div>
  <div style={{...}}>
    <Switch id=\\"two\\" color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"two\\" className=\\"drac-text drac-text-white\\">
      Option 2
    </label>
  </div>
  <div style={{...}}>
    <Switch id=\\"three\\" color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"three\\" className=\\"drac-text drac-text-white\\">
      Option 3
    </label>
  </div>
</div>",
  "title": "Usage",
}
`;

exports[`Site: Switch Colors 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-black</p>
    <input
      type=\\"checkbox\\"
      id=\\"black\\"
      color=\\"black\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-black\\"
      checked=\\"\\"
    /><label for=\\"black\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-white</p>
    <input
      type=\\"checkbox\\"
      id=\\"white\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-white\\"
      checked=\\"\\"
    /><label for=\\"white\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-cyan</p>
    <input
      type=\\"checkbox\\"
      id=\\"cyan\\"
      color=\\"cyan\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-cyan\\"
      checked=\\"\\"
    /><label for=\\"cyan\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-green</p>
    <input
      type=\\"checkbox\\"
      id=\\"green\\"
      color=\\"green\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-green\\"
      checked=\\"\\"
    /><label for=\\"green\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-orange</p>
    <input
      type=\\"checkbox\\"
      id=\\"orange\\"
      color=\\"orange\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-orange\\"
      checked=\\"\\"
    /><label for=\\"orange\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-pink</p>
    <input
      type=\\"checkbox\\"
      id=\\"pink\\"
      color=\\"pink\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-pink\\"
      checked=\\"\\"
    /><label for=\\"pink\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-purple</p>
    <input
      type=\\"checkbox\\"
      id=\\"purple\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-purple\\"
      checked=\\"\\"
    /><label for=\\"purple\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-red</p>
    <input
      type=\\"checkbox\\"
      id=\\"red\\"
      color=\\"red\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-red\\"
      checked=\\"\\"
    /><label for=\\"red\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-yellow</p>
    <input
      type=\\"checkbox\\"
      id=\\"yellow\\"
      color=\\"yellow\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-yellow\\"
      checked=\\"\\"
    /><label for=\\"yellow\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-animated</p>
    <input
      type=\\"checkbox\\"
      id=\\"animated\\"
      color=\\"animated\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox\\"
      checked=\\"\\"
    /><label for=\\"animated\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">.drac-switch .drac-switch-cyanGreen</p>
    <input
      type=\\"checkbox\\"
      id=\\"cyanGreen\\"
      color=\\"cyanGreen\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox\\"
      checked=\\"\\"
    /><label for=\\"cyanGreen\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-pinkPurple
    </p>
    <input
      type=\\"checkbox\\"
      id=\\"pinkPurple\\"
      color=\\"pinkPurple\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox\\"
      checked=\\"\\"
    /><label for=\\"pinkPurple\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-purpleCyan
    </p>
    <input
      type=\\"checkbox\\"
      id=\\"purpleCyan\\"
      color=\\"purpleCyan\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox\\"
      checked=\\"\\"
    /><label for=\\"purpleCyan\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
  <div>
    <p class=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-yellowPink
    </p>
    <input
      type=\\"checkbox\\"
      id=\\"yellowPink\\"
      color=\\"yellowPink\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox\\"
      checked=\\"\\"
    /><label for=\\"yellowPink\\" class=\\"drac-text drac-text-white\\">Switch</label>
  </div>
</div>
",
  "react": "<div style={{...}}>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      black
    </p>
    <Switch id=\\"black\\" defaultChecked={true} color=\\"black\\" name=\\"demo\\" />
    <label htmlFor=\\"black\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      white
    </p>
    <Switch id=\\"white\\" defaultChecked={true} color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"white\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      cyan
    </p>
    <Switch id=\\"cyan\\" defaultChecked={true} color=\\"cyan\\" name=\\"demo\\" />
    <label htmlFor=\\"cyan\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      green
    </p>
    <Switch id=\\"green\\" defaultChecked={true} color=\\"green\\" name=\\"demo\\" />
    <label htmlFor=\\"green\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      orange
    </p>
    <Switch id=\\"orange\\" defaultChecked={true} color=\\"orange\\" name=\\"demo\\" />
    <label htmlFor=\\"orange\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      pink
    </p>
    <Switch id=\\"pink\\" defaultChecked={true} color=\\"pink\\" name=\\"demo\\" />
    <label htmlFor=\\"pink\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      purple
    </p>
    <Switch id=\\"purple\\" defaultChecked={true} color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"purple\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      red
    </p>
    <Switch id=\\"red\\" defaultChecked={true} color=\\"red\\" name=\\"demo\\" />
    <label htmlFor=\\"red\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      yellow
    </p>
    <Switch id=\\"yellow\\" defaultChecked={true} color=\\"yellow\\" name=\\"demo\\" />
    <label htmlFor=\\"yellow\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      animated
    </p>
    <Switch id=\\"animated\\" defaultChecked={true} color=\\"animated\\" name=\\"demo\\" />
    <label htmlFor=\\"animated\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      cyanGreen
    </p>
    <Switch id=\\"cyanGreen\\" defaultChecked={true} color=\\"cyanGreen\\" name=\\"demo\\" />
    <label htmlFor=\\"cyanGreen\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      pinkPurple
    </p>
    <Switch id=\\"pinkPurple\\" defaultChecked={true} color=\\"pinkPurple\\" name=\\"demo\\" />
    <label htmlFor=\\"pinkPurple\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      purpleCyan
    </p>
    <Switch id=\\"purpleCyan\\" defaultChecked={true} color=\\"purpleCyan\\" name=\\"demo\\" />
    <label htmlFor=\\"purpleCyan\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
  <div>
    <p className=\\"drac-text drac-text-white\\">
      .drac-switch .drac-switch-
      yellowPink
    </p>
    <Switch id=\\"yellowPink\\" defaultChecked={true} color=\\"yellowPink\\" name=\\"demo\\" />
    <label htmlFor=\\"yellowPink\\" className=\\"drac-text drac-text-white\\">
      Switch
    </label>
  </div>
</div>",
  "title": "Colors",
}
`;

exports[`Site: Switch Disabled 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"one\\"
      disabled=\\"\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-white\\"
      checked=\\"\\"
    /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Checked</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"checkbox\\"
      id=\\"two\\"
      disabled=\\"\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-switch drac-checkbox drac-switch-white\\"
    /><label for=\\"two\\" class=\\"drac-text drac-text-white\\">Unchecked</label>
  </div>
</div>
",
  "react": "<div style={{...}}>
  <div style={{...}}>
    <Switch id=\\"one\\" disabled={true} defaultChecked={true} color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
      Checked
    </label>
  </div>
  <div style={{...}}>
    <Switch id=\\"two\\" disabled={true} color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"two\\" className=\\"drac-text drac-text-white\\">
      Unchecked
    </label>
  </div>
</div>",
  "title": "Disabled",
}
`;
